# notan

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  all_examples.sh  example.html  index.html  shaders.sh  shell.nix  web.sh  web_example.sh
crates/notan_app/: Cargo.toml  README.md
crates/notan_app/src/: app.rs  assets.rs  backend.rs  builder.rs  config.rs  empty.rs  events.rs  fps_plugin.rs  graphics.rs  handlers.rs  lib.rs  mouse.rs  parsers.rs  plugins.rs  prelude.rs  timer.rs
crates/notan_app2/: Cargo.toml  build.rs
crates/notan_app2/src/: app.rs  config.rs  lib.rs
crates/notan_audio/: Cargo.toml  README.md
crates/notan_audio/src/: backend.rs  lib.rs  manager.rs  prelude.rs  tracker.rs
crates/notan_backend/: Cargo.toml  README.md
crates/notan_backend/src/: lib.rs  prelude.rs
crates/notan_core/: Cargo.toml  README.md
crates/notan_core/src/: builder.rs  config.rs  events.rs  handlers.rs  keyboard.rs  lib.rs  mouse.rs  plugin.rs  runner.rs  state.rs  storage.rs  sys.rs  utils.rs  window.rs
crates/notan_draw/: Cargo.toml  README.md
crates/notan_draw/src/: atlas.rs  batch.rs  builder.rs  config.rs  custom_pipeline.rs  draw.rs  draw2d.rs  extension.rs  lib.rs  manager.rs  renderer.rs  shapes.rs  sprite.rs  spritebatch.rs  texts.rs  transform.rs
crates/notan_egui/: Cargo.toml  README.md
crates/notan_egui/src/: config.rs  context.rs  extension.rs  input.rs  lib.rs  plugin.rs
crates/notan_extra/: Cargo.toml  README.md
crates/notan_extra/src/: fps_limit.rs  lib.rs
crates/notan_gfx/: Cargo.toml
crates/notan_gfx/src/: attrs.rs  bind_group.rs  blend_mode.rs  buffer.rs  color.rs  config.rs  consts.rs  device.rs  frame.rs  gfx.rs  lib.rs  pipeline.rs  prelude.rs  render_target.rs  render_texture.rs  renderer.rs  texture.rs
crates/notan_glow/: Cargo.toml  README.md
crates/notan_glow/src/: buffer.rs  html_image.rs  lib.rs  pipeline.rs  prelude.rs  render_target.rs  texture.rs  texture_source.rs  to_glow.rs  utils.rs
crates/notan_glyph/: Cargo.toml
crates/notan_glyph/src/: cache.rs  config.rs  font.rs  instance.rs  lib.rs  owned_text.rs  parser.rs  pipeline.rs  plugin.rs
crates/notan_graphics/: Cargo.toml  README.md
crates/notan_graphics/src/: buffer.rs  color.rs  commands.rs  device.rs  lib.rs  limits.rs  pipeline.rs  prelude.rs  render_texture.rs  renderer.rs  shader.rs  texture.rs  to_file.rs
crates/notan_input/: Cargo.toml  README.md
crates/notan_input/src/: internals.rs  keyboard.rs  lib.rs  mouse.rs  prelude.rs  touch.rs
crates/notan_log/: Cargo.toml  README.md
crates/notan_log/src/: config.rs  console_error.rs  lib.rs
crates/notan_macro/: Cargo.toml  README.md  build.rs
crates/notan_macro/src/: handlers.rs  lib.rs  shaders.rs  state.rs
crates/notan_macro2/: Cargo.toml
crates/notan_macro2/src/: lib.rs  resource.rs  state.rs
crates/notan_math/: Cargo.toml  README.md
crates/notan_math/src/: constants.rs  lib.rs  prelude.rs  random.rs  rect.rs  utils.rs
crates/notan_oddio/: Cargo.toml  README.md
crates/notan_oddio/src/: backend.rs  decoder.rs  dummy.rs  lib.rs  webaudio.rs
crates/notan_random/: Cargo.toml  README.md
crates/notan_random/src/: lib.rs  prelude.rs  utils.rs
crates/notan_text/: Cargo.toml  README.md
crates/notan_text/src/: calculator.rs  config.rs  lib.rs
nae-backend/: Cargo.toml
nae-backend/src/: common.rs  lib.rs  sdl_backend.rs  web_backend.rs  winit_backend.rs
nae-core/: Cargo.toml  README.md
nae-core/src/: color.rs  geometry.rs  gfx.rs  lib.rs  log.rs  logger.rs  math.rs  pipeline.rs  rand.rs  resources.rs  window.rs
nae-core/src/gfx/: geometry.rs  mod.rs  pipeline.rs
nae-core/src/graphics/: blend.rs  color.rs  geometry.rs  mod.rs  transform.rs
nae-extras/: Cargo.toml
nae-extras/src/: lib.rs  random.rs  transform2d.rs
nae-gfx/: Cargo.toml  README.md  build.rs
nae-gfx/resources/shaders/: color.frag  color.frag.spv  color.vert  color.vert.spv
nae-gfx/src/: Font.rs  batchers.rs  buffers.rs  draw.rs  font.rs  lib.rs  main.rs  matrix.rs  pipeline.rs  render_target.rs  shader.rs  shapes.rs  texture.rs
nae-gfx/src/shaders/: image.frag  image.frag.spv  image.vert  image.vert.spv  pattern.frag  pattern.frag.spv  pattern.vert  pattern.vert.spv  text.vert.spv  textured.frag  textured.frag.spv  textured.vert  textured.vert.spv
nae-glow/: Cargo.toml  README.md
nae-glow/resources/shaders/: color.frag.glsl  color.vert.glsl  image.frag.glsl  image.vert.glsl  text.frag.glsl  text.vert.glsl
nae-glow/src/: atlas.rs  batchers.rs  context.rs  font.rs  lib.rs  shader.rs  surface.rs  texture.rs
nae-native/: Cargo.toml
nae-native/src/: lib.rs  window.rs  window_sdl.rs  window_winit.rs
nae-web/: Cargo.toml
nae-web/src/: file.rs  lib.rs  window.rs
notan/: Cargo.toml  README.md  example.html  web_example.sh
notan/crates/notan_app/: Cargo.toml
notan/crates/notan_core/: Cargo.toml
notan/crates/notan_default_backend/: Cargo.toml  README.md
notan/crates/notan_derive/: Cargo.toml
notan/docs/: index.html
notan/examples/: bunnymark.rs  draw_animation_grid.rs  draw_atlas.rs  draw_blend_mode.rs  draw_blend_mode_object.rs  draw_bunnymark.rs  draw_image.rs  draw_image_crop.rs  draw_mask.rs  draw_mask1.rs  draw_mask_texture.rs  draw_nine_slice.rs  draw_path.rs  draw_pattern.rs  draw_rect.rs  draw_shader.rs  draw_shapes.rs  draw_test.rs  draw_text.rs  draw_transform.rs  draw_triangle.rs  draw_vertex_color.rs  egui_2.rs  egui_basic.rs  egui_render_texture.rs  egui_shape_widget.rs  egui_texture.rs  game_of_life.rs  game_pong.rs  game_snake.rs  game_tetris.rs  graphics_update_texture.rs  hello.rs  input_keyboard.rs  input_keyboard_char.rs  input_mouse.rs  input_mouse_events.rs  input_mouse_local_position.rs  input_mouse_wheel.rs  renderer_cube.rs  (+12 more)
notan/scripts/: build_examples.sh  example.html
notan/src/: lib.rs  notan.rs  prelude.rs
xtask/: Cargo.toml  README.md
xtask/res/: docs.html  example.html
xtask/src/: cli.rs  cli_docs.rs  cli_example.rs  cli_example_msvc.rs  cli_example_web.rs  cli_examples.rs  cli_examples_msvc.rs  cli_examples_web.rs  main.rs
(+764 files in other folders)
