[package]
name = "notan"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories = ["graphics", "rendering", "wasm", "gui", "multimedia"]
keywords = ["notan", "engine", "gamedev", "gui", "windowing"]
exclude = ["docs/**/*", "scripts/**/*", "crates/**/*"]
readme = "README.md"
description = "A simple portable multimedia layer to create apps or games easily"

[workspace]
# TODO set back to "crates/*" after cleanup
members = [
    "crates/notan_core",
    "crates/notan_macro2",
    "crates/notan_app2"
]

[workspace.package]
version = "1.0.0-alpha.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Nazariglez/notan"
repository = "https://github.com/Nazariglez/notan"
edition = "2021"

[workspace.dependencies]
notan_core = { path = "crates/notan_core" }
notan_macro2 = { path = "crates/notan_macro2" }
notan_app2 = { path = "crates/notan_app2" }
#notan_input = { path = "crates/notan_input" }
#notan_app = { path = "crates/notan_app" }
#notan_macro = { path = "crates/notan_macro" }
#notan_math = { path = "crates/notan_math" }
#notan_graphics = { path = "crates/notan_graphics" }
#notan_utils = { path = "crates/notan_utils" }
#notan_log = { path = "crates/notan_log" }
#notan_glyph = { path = "crates/notan_glyph" }
#notan_draw = { path = "crates/notan_draw" }
#notan_backend = { path = "crates/notan_backend" }
#notan_egui = { path = "crates/notan_egui" }
#notan_text = { path = "crates/notan_text" }
#notan_audio = { path = "crates/notan_audio" }
#notan_extra = { path = "crates/notan_extra" }
#notan_random = { path = "crates/notan_random" }
#notan_winit = { path = "crates/notan_winit" }
#notan_web = { path = "crates/notan_web" }
#notan_glow = { path = "crates/notan_glow" }
#notan_oddio = { path = "crates/notan_oddio" }

log = "0.4.20"
hashbrown = "0.14.3"
parking_lot = "0.12.1"
bytemuck = "1.14.0"
anymap = "0.12.1"
arrayvec = "0.7.4"
raw-window-handle = "0.6.0"
serde = { version = "1.0", features = ["serde_derive"] }
image = { version = "0.24.8", default-features = false, features = ["jpeg", "png", "ico"] }

# wasm deps
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
futures-util = "0.3.30"
web-sys = "0.3.67"
js-sys = "0.3.67"
cfg_aliases = "0.2.0"

[dependencies]
notan_core.workspace = true
notan_macro2.workspace = true
notan_app2.workspace = true
#notan_input.workspace = true
#notan_app.workspace = true
#notan_macro.workspace = true
#notan_math.workspace = true
#notan_graphics.workspace = true
#notan_utils.workspace = true
#notan_log = { workspace = true, optional = true }
#notan_glyph = { workspace = true, optional = true }
#notan_draw = { workspace = true, optional = true }
#notan_backend = { workspace = true, optional = true }
#notan_egui = { workspace = true, optional = true }
#notan_text = { workspace = true, optional = true }
#notan_audio = { workspace = true, optional = true }
#notan_extra = { workspace = true, optional = true }
#notan_random = { workspace = true, optional = true }

[features]
default = ["limited_core_events"]
# uses winit as backend
winit = ["notan_app2/winit"]
# allow to serialize and deserialize internal types with serde
serde = ["notan_core/serde", "notan_app2/serde"]
# use arrayvec instead of vec when possible
limited_core_events = ["notan_core/limited_events"]

#default = ["backend", "log", "draw", "random", "glsl-to-spirv"]
#backend = ["notan_backend"]
#log = ["notan_log"]
#glyph = ["notan_glyph"]
#draw = ["notan_draw"]
#egui = ["notan_egui"]
#text = ["notan_text"]
#extra = ["notan_extra"]
#audio = ["notan_audio", "notan_app/audio", "notan_backend?/audio"]
#links = ["notan_app/links", "notan_backend?/links", "notan_egui?/links"]
#drop_files = ["notan_app/drop_files", "notan_backend?/drop_files", "notan_egui?/drop_files"]
#clipboard = ["notan_app/clipboard", "notan_backend?/clipboard"]
#save_file = ["notan_utils/save_file"]
#texture_to_file = ["notan_graphics/texture_to_file"]
#random = ["notan_random"]
#glsl-to-spirv = ["notan_macro/glsl-to-spirv", "notan_glyph?/glsl-to-spirv", "notan_draw?/glsl-to-spirv", "notan_egui?/glsl-to-spirv", "notan_text?/glsl-to-spirv"]
#shaderc = ["notan_macro/shaderc", "notan_glyph?/shaderc", "notan_draw?/shaderc", "notan_egui?/shaderc", "notan_text?/shaderc"]
#serde = ["notan_app/serde", "notan_math/serde", "notan_core/serde", "notan_input/serde", "notan_graphics/serde"]

#[package.metadata.docs.rs]
#features = ["default", "glyph", "egui", "text", "extra", "audio", "links", "drop_files", "clipboard", "save_file", "texture_to_file"]

[profile.release]
lto = true

[dev-dependencies]
#egui_demo_lib = "0.23.0"
bytemuck.workspace = true

