[package]
name = "nae-backend"
version = "0.1.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nae-core = { path = "../nae-core" }
nae-gfx = { path = "../nae-gfx" }
futures = "0.1.29"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.55"
js-sys = "0.3.30"
wasm-bindgen-futures = "0.3"
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.28"
features = [
    "Document",
    "Window",
    "Element",
    "HtmlElement",
    "Node",
    "DomRect",
    "DomRectReadOnly",
    "HtmlCanvasElement",
    "XmlHttpRequest",
    "XmlHttpRequestEventTarget",
    "XmlHttpRequestResponseType",
    "Event",
    "EventListener",
    "EventTarget",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = { version="0.20", optional=true }
glutin = { version="0.22", optional=true }
sdl2 = { version="0.33", optional=true }

[features]
winit_win = ["winit", "glutin"]
sdl = ["sdl2", "nae-gfx/sdl"]
