[package]
name = "nae-core"
version = "0.1.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyon = "0.14.1"
log = "0.4.8"
nalgebra-glm = "0.4.2"
downcast-rs = "1.1.1"
mopa = "0.2.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "0.1.2"
js-sys = "0.3.32"

[dev-dependencies]
wasm-bindgen-test = "0.3.5"
wasm-bindgen = "0.2.55"
