[package]
name = "nae-core"
version = "0.1.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyon = "0.15.6"
log = "0.4.8"
nalgebra-glm = "0.4.2"
rand_pcg = "0.2.1"
rand = {version = "0.7.2", features = ["wasm-bindgen"]}
lazy_static = "1.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = "1.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "0.1.2"
js-sys = "0.3.32"

[dev-dependencies]
wasm-bindgen-test = "0.3.5"
wasm-bindgen = "0.2.55"
