[package]
name = "nae-extras"
version = "0.1.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_pcg = "0.2.1"
rand = {version = "0.7.2", features = ["wasm-bindgen"]}

[dev-dependencies]
wasm-bindgen-test = "0.3.5"
wasm-bindgen = "0.2.55"
