[package]
name = "nae-gfx"
version = "0.1.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "0.4"
nae-core = { path="../nae-core" }
spirv_cross = { version = "0.17.1", features = ["glsl"] }

[build-dependencies]
shaderc = "0.6"
