[package]
name = "nae-gfx"
version = "0.1.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "0.4"
nae-core = { path="../nae-core" }
spirv_cross = { version = "0.17.1", features = ["glsl"] }
image = "0.23.0"
hashbrown = "0.7"
lyon = "0.15"
ultraviolet = "0.4.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.55"
js-sys = "0.3.30"
web-sys = { version = "0.3.28", features = ["Window", "WebGlContextAttributes","HtmlCanvasElement","HtmlImageElement"] }

[build-dependencies]
shaderc = "0.6"
