[package]
name = "nae-glow"
version = "0.1.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nae-core = { path = "../nae-core" }
glow = "0.3.0-alpha2"
glyph_brush = "0.6.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.30"
web-sys = { version = "0.3.28", features = ["Window", "WebGlContextAttributes","HtmlCanvasElement","HtmlImageElement"] }
