[package]
name = "nae-glow"
version = "0.1.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nae-core = { path = "../nae-core" }
glow = "0.4"
glyph_brush = "0.6.1"
image = "0.22.3"
hashbrown = "0.6.3"
lyon = "0.14.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.55"
js-sys = "0.3.30"
web-sys = { version = "0.3.28", features = ["Window", "WebGlContextAttributes","HtmlCanvasElement","HtmlImageElement"] }
