[package]
name = "nae-native"
version = "0.1.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nae-core = { path = "../nae-core" }
nae-glow = { path = "../nae-glow" }
futures = "0.1.29"
winit = "0.20"
glutin = "0.22"
sdl2 = { version="0.33", optional=true }

[features]
sdl = ["sdl2", "nae-glow/sdl"]
