[package]
name = "nae-web"
version = "0.1.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nae-core = { path = "../nae-core" }
nae-glow = { path = "../nae-glow" }
wasm-bindgen = "0.2.55"
js-sys = "0.3.30"
futures = "0.1.29"
wasm-bindgen-futures = "0.3"

[dependencies.web-sys]
version = "0.3.28"
features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "XmlHttpRequest",
    "XmlHttpRequestEventTarget",
    "XmlHttpRequestResponseType"
]

