[package]
name = "notan"
version = "0.1.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan_log = { path = "./crates/notan_log" }
notan_app = { path = "./crates/notan_app" }
notan_derive = { path = "./crates/notan_derive" }
notan_default_backend = { path = "./crates/notan_default_backend", optional = true }

[workspace]
members = ["crates/*"]

[features]
default = ["default_backend"]
default_backend = ["notan_default_backend"]