[package]
name = "notan"
version = "0.1.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.13"
notan_log = { path = "./crates/notan_log" }
notan_app = { path = "./crates/notan_app" }
notan_macro = { path = "crates/notan_macro" }
notan_math = { path = "./crates/notan_math" }
notan_glyph = { path = "./crates/notan_glyph", optional = true }
notan_graphics = { path = "./crates/notan_graphics" }
notan_draw = { path = "./crates/notan_draw" }
notan_default_backend = { path = "./crates/notan_default_backend", optional = true }

[workspace]
members = ["crates/*"]

[features]
default = ["default_backend", "log_enabled", "glyphs"]
log_enabled = []
default_backend = ["notan_default_backend"]
glyphs = ["notan_glyph", "notan_app/glyphs"]

[dev-dependencies]
wasm-bindgen = "0.2"