[package]
name = "notan"
version = "0.1.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan_log = { path = "./crates/notan_log" }
notan_app = { path = "./crates/notan_app" }
notan_macro = { path = "crates/notan_macro" }
notan_math = { path = "./crates/notan_math" }
notan_graphics = { path = "./crates/notan_graphics" }
notan_utils = { path = "./crates/notan_utils" }
notan_glyph = { path = "./crates/notan_glyph", optional = true }
notan_draw = { path = "./crates/notan_draw", optional = true }
notan_backend = { path = "crates/notan_backend", optional = true }
notan_egui = { path = "crates/notan_egui", optional = true }

[workspace]
members = ["crates/*"]

[features]
default = ["default_backend", "log_enabled", "draw", "glyphs"]
log_enabled = []
default_backend = ["notan_backend"]
glyphs = ["notan_glyph"]
draw = ["notan_draw"]
egui = ["notan_egui"]

[dev-dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[[example]]
name = "egui_basic"
required-features = ["egui"]