[package]
name = "xtask"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
fs_extra = "1.3.0"
xflags = "0.3.2"
