[package]
name = "notan_app"
version = "0.2.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Nazariglez/notan"
repository = "https://github.com/Nazariglez/notan"
license = "MIT OR Apache-2.0"
description = "Provides the core API for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
hashbrown = "0.12"
notan_math = { path = "../notan_math", version = "0.2.0" }
notan_macro = { path = "../notan_macro", version = "0.2.0" }
notan_graphics = { path = "../notan_graphics", version = "0.2.0" }
notan_utils = { path = "../notan_utils", version = "0.2.0" }
downcast-rs = "1.2"
indexmap = "1.8"
futures = "0.3"
platter = { version = "0.1.4", features = ["web-sys"] }
parking_lot = "0.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
futures-util = { version = "0.3", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
links = []
drop_files = ["wasm-bindgen-futures", "js-sys", "futures-util", "web-sys", "web-sys/File", "web-sys/Blob"]
clipboard = []
