[package]
name = "notan_app"
version = "0.7.1"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Nazariglez/notan"
repository = "https://github.com/Nazariglez/notan"
license = "MIT OR Apache-2.0"
description = "Provides the core API for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
hashbrown = "0.12.3"
notan_core = { path = "../notan_core", version = "0.7.1" }
notan_input = { path = "../notan_input", version = "0.7.1" }
notan_math = { path = "../notan_math", version = "0.7.1" }
notan_macro = { path = "../notan_macro", version = "0.7.1" }
notan_graphics = { path = "../notan_graphics", version = "0.7.1" }
notan_utils = { path = "../notan_utils", version = "0.7.1" }
notan_audio = { path = "../notan_audio", version = "0.7.1", optional = true }
downcast-rs = "1.2.0"
indexmap = "1.9.1"
futures = "0.3.24"
parking_lot = "0.12.1"
bytemuck = "1.12.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
platter2 = "0.1.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.60", optional = true }
wasm-bindgen-futures = { version = "0.4.33", optional = true }
futures-util = { version = "0.3.24", optional = true }
js-sys = { version = "0.3.60", optional = true }
platter2 = { version = "0.1.6", features = ["web-sys"] }

[features]
audio = ["notan_audio"]
links = ["notan_core/links"]
drop_files = ["notan_core/drop_files", "wasm-bindgen-futures", "js-sys", "futures-util", "web-sys", "web-sys/File", "web-sys/Blob"]
clipboard = ["notan_core/clipboard"]
