[package]
name = "notan_app"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "Provides the core API for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan_core.workspace = true
notan_input.workspace = true
notan_macro.workspace = true
notan_graphics.workspace = true
notan_utils.workspace = true
notan_audio = { workspace = true, optional = true }

log.workspace = true
hashbrown.workspace = true
parking_lot.workspace = true
serde = { workspace = true, optional = true }

downcast-rs = "1.2.0"
indexmap = "2.0.2"
futures = "0.3.28"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
platter2 = "0.1.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
platter2 = { version = "0.1.6", features = ["web-sys"] }
web-sys = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }

[features]
audio = ["notan_audio"]
links = ["notan_core/links"]
drop_files = ["notan_core/drop_files", "wasm-bindgen-futures", "js-sys", "futures-util", "web-sys", "web-sys/File", "web-sys/Blob"]
clipboard = ["notan_core/clipboard"]
