[package]
name = "notan_app2"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "Default backend for Notan's app"

[dependencies]
notan_core.workspace = true

log.workspace = true
hashbrown.workspace = true
raw-window-handle.workspace = true
serde = { workspace = true, optional = true }

#[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
#winit = { version = "0.29.10", optional = true }
