[package]
name = "notan_audio"
version = "0.7.1"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Nazariglez/notan"
repository = "https://github.com/Nazariglez/notan"
license = "MIT OR Apache-2.0"
description = "Provides simple audio API for Notan"

[dependencies]
parking_lot = "0.12.1"
