[package]
name = "notan_backend"
version = "0.10.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Nazariglez/notan"
repository = "https://github.com/Nazariglez/notan"
license = "MIT OR Apache-2.0"
description = "Provides a default backend for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_arch = "wasm32")'.dependencies]
notan_web.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notan_winit.workspace = true

[features]
audio = ["notan_web/audio", "notan_winit/audio"]
links = ["notan_winit/links"]
drop_files = ["notan_winit/drop_files", "notan_web/drop_files"]
clipboard = ["notan_winit/clipboard", "notan_web/clipboard"]
