[package]
name = "notan_core"
version = "0.10.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Nazariglez/notan"
repository = "https://github.com/Nazariglez/notan"
license = "MIT OR Apache-2.0"
description = "Basic types and structs used in Notan"

[dependencies]
serde = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, optional = true }

[features]
links = []
drop_files = ["web-sys", "web-sys/File"]
clipboard = []
