[package]
name = "notan_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "Basic types and structs used in Notan"

[dependencies]
serde = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, optional = true }

[features]
links = []
drop_files = ["web-sys", "web-sys/File"]
clipboard = []
