[package]
name = "notan_draw"
version = "0.10.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Nazariglez/notan"
repository = "https://github.com/Nazariglez/notan"
license = "MIT OR Apache-2.0"
description = "Provides a simple 2D API for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
notan_app.workspace = true
notan_graphics.workspace = true
notan_macro.workspace = true
notan_math.workspace = true
notan_glyph.workspace = true
notan_text.workspace = true
serde = { workspace = true, features = ["derive"] }

lyon = "1.0.1"
serde_json = "1.0.96"

[features]
glsl-to-spirv = ["notan_macro/glsl-to-spirv", "notan_glyph/glsl-to-spirv", "notan_text/glsl-to-spirv"]
shaderc = ["notan_macro/shaderc", "notan_glyph/shaderc", "notan_text/shaderc"]
