[package]
name = "notan_draw"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "Provides a simple 2D API for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
notan_math.workspace = true
notan_core.workspace = true
notan_app2.workspace = true
notan_gfx.workspace = true

lyon = "1.0.1"