[package]
name = "notan_draw"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "Provides a simple 2D API for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
notan_app.workspace = true
notan_graphics.workspace = true
notan_macro.workspace = true
notan_math.workspace = true
notan_glyph.workspace = true
notan_text.workspace = true
serde = { workspace = true, features = ["derive"] }

lyon = "1.0.1"
serde_json = "1.0.137"

[features]
glsl-to-spirv = ["notan_macro/glsl-to-spirv", "notan_glyph/glsl-to-spirv", "notan_text/glsl-to-spirv"]
shaderc = ["notan_macro/shaderc", "notan_glyph/shaderc", "notan_text/shaderc"]
